--- a/src/app/our-team/team.module.css
+++ b/src/app/our-team/team.module.css
@@ -1,6 +1,7 @@
 /* Page */
 .pageRoot {
   background: #ffffff;
+  padding-bottom: 120px; /* Ensure space for footer */
  .modalBody {
   width: 100%;
   display: flex;
