Updated recursive animation

--- a/src/app/blogs/blogs.module.css
+++ b/src/app/blogs/blogs.module.css
@@ -11,6 +11,13 @@
   justify-content: center;
   height: 120px;
 }
+.loopLeft {
+  animation: slideInLeft 1.6s cubic-bezier(0.4,0,0.2,1) infinite alternate;
+}
+.loopRight {
+  animation: slideInRight 1.6s cubic-bezier(0.4,0,0.2,1) infinite alternate;
+  animation-delay: 0.4s;
+}
 .subTitle {
   color: #475569;
 }
