--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -117,7 +117,7 @@
   }
   .dashboardImg {
     max-width: 100%;
-    height: 180px;
+    height: auto;
   }
 }
 @media (max-width: 600px) {
@@ -129,9 +129,10 @@
   }
   .descSection {
     font-size: 0.95rem;
+    padding: 0 0.25rem;
   }
   .dashboardImg {
-    height: 120px;
+    height: auto;
   }
 }
 .valuesSection {
