--- a/src/app/service/service.module.css
+++ b/src/app/service/service.module.css
@@ -196,6 +196,8 @@
   flex-direction: column;
   align-items: center;
   gap: 4rem;
+  padding-left: 100px;
+  padding-bottom: 100px;
 }
 
 .imageContainer {
@@ -203,6 +205,8 @@
   width: 420px;
   height: 260px;
   max-width: 100%;
+  padding-left: 100px;
+  padding-bottom: 20px;
 }
 
 .backImage {
@@ -665,7 +669,9 @@
   }
   
   .backImage, .frontImage {
-    max-width: 240px;
+    max-width: 200px;
+    height: auto;
+    
   }
 }
 
